[gd_scene load_steps=5 format=2]

[ext_resource path="res://objects/ball/ball_soccer4.png" type="Texture" id=1]
[ext_resource path="res://objects/ball/Ball.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 8.06226

[sub_resource type="CircleShape2D" id=2]
radius = 30.0

[node name="Ball" type="RigidBody2D" groups=["ball"]]
collision_layer = 9
collision_mask = 256
gravity_scale = 0.0
continuous_cd = 2
contacts_reported = 3
contact_monitor = true
can_sleep = false
angular_velocity = 10.0
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Nearby" type="Area2D" parent="."]
collision_mask = 257
input_pickable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Nearby"]
shape = SubResource( 2 )

[node name="SlowdownTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_Ball_body_entered"]
[connection signal="body_entered" from="Nearby" to="." method="_on_Nearby_body_entered"]
[connection signal="body_exited" from="Nearby" to="." method="_on_Nearby_body_exited"]
